--- a/env.example
+++ b/env.example
@@ -1,6 +1,9 @@
 # App Configuration
 PORT=3000
 
+# API Configuration
+REACT_APP_API_BASE_URL=http://localhost:8000
+
 # Firebase Configuration
 REACT_APP_FIREBASE_API_KEY=YOUR_API_KEY
 REACT_APP_FIREBASE_AUTH_DOMAIN=YOUR_PROJECT_ID.firebaseapp.com
@@ -8,3 +11,6 @@ REACT_APP_FIREBASE_PROJECT_ID=YOUR_PROJECT_ID
 REACT_APP_FIREBASE_STORAGE_BUCKET=YOUR_PROJECT_ID.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID
 REACT_APP_FIREBASE_APP_ID=YOUR_APP_ID
+
+# Stripe Configuration
+REACT_APP_STRIPE_PUBLISHABLE_KEY=YOUR_STRIPE_PUBLISHABLE_KEY
