--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "AI Tools App",
-  "name": "AI Tools App",
+  "short_name": "Solara",
+  "name": "Solara: Your Pocket Communicaion Coach",
   "icons": [
     {
       "src": "favicon.ico",
