Add icon generation script and update assets
- Added `generate-icons.js` script to generate favicon and app icons using sharp and to-ico.
- Included new icons: `logo192.png`, `logo512.png`, and `favicon.ico` in the public directory.
- Updated `package.json` to include sharp and to-ico dependencies.
- Added a default icon image for processing.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-scripts": "5.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "sharp": "^0.34.1",
+    "to-ico": "^1.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
