feat: update branding and text throughout the application to reflect new identity as 'Your Tax Assistant'

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Solara",
-  "name": "Solara: Your Pocket Communicaion Coach",
+  "short_name": "Your Tax Bot",
+  "name": "Your Tax Assistant to help answer your tax questions",
   "icons": [
     {
       "src": "favicon.ico",
