feat: update branding to "Your MATE" and enhance UI elements for improved user experience

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Your Tax Bot",
-  "name": "Your Tax Assistant to help answer your tax questions",
+  "short_name": "Your MATE",
+  "name": "Your Mobile Australian Tax Expert",
   "icons": [
     {
       "src": "favicon.ico",
